# diskfs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
diskfs/: __init__.py  _darwin.py  _darwin.pyi  base.py  bytestruct.py  darwin.py  disk.py  filesystem.py  gpt.py  linux.py  mbr.py  table.py  typing.py  typing_.py  volume.py  win32.py
diskfs/fat/: __init__.py  base.py  directory.py  fat.py  filesystem.py  io.py  path.py  reserved.py
diskfs/table/: __init__.py  base.py  gpt.py  mbr.py
tests/: conftest.py  test_base.py  test_bytestruct.py  test_darwin.py  test_linux.py  test_platform_specific.py  test_win32.py
tests/fat/: test_base.py  test_directory.py  test_reserved.py
