[tool.poetry]
name = "diskfs"
version = "0.1.0"
description = "Disk and file system manipulation"
license = "MIT"
authors = ["Tom Hunze <github@thunze.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coveralls = "^3.3.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.971"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "return NotImplemented",
    "assert False",
]

[tool.black]
target-version = ['py310']
skip-string-normalization = true  # maybe disable this later on
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.pytest_cache
| \.tox
| \.venv
| build
| dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
