[tool.poetry]
name = "diskfs"
version = "0.1.0"
description = "Disk and file system manipulation"
license = "MIT"
authors = ["Tom Hunze <github@thunze.de>"]
readme = "README.md"
repository = "https://github.com/thunze/diskfs"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed"
]
packages = [{include = "diskfs"}]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
pre-commit = "^3.5.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
markers = [
    "privileged: mark the test as requiring elevated privileges",
    "serial"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "return NotImplemented",
    "assert False",
]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
