[tool.poetry]
name = "diskfs"
version = "0.1.0"
description = "Disk and file system manipulation"
license = "MIT"
authors = ["Tom Hunze <github@thunze.de>"]
readme = "README.md"
repository = "https://github.com/thunze/diskfs"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed"
]
packages = [{include = "diskfs"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
pre-commit = "^3.5.0"
mypy = "^1.8.0"
ruff = "^0.2.2"

[tool.coverage.run]
source = ["diskfs"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "return NotImplemented",
    "assert False",
]

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
extra_checks = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "privileged: mark the test as requiring elevated privileges",
    "serial",
]

[tool.ruff]
target-version = "py38"  # minimum

[tool.ruff.lint]
select = [
    "E", "F", "W", "I",
    "ASYNC", "C4", "PLC", "PLE", "PLW", "RUF", "S", "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"diskfs/darwin.py" = ["E402"]
"diskfs/linux.py" = ["E402"]
"diskfs/win32.py" = ["E402"]
"tests/test_darwin.py" = ["E402"]
"tests/test_win32.py" = ["E402"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
